# agent-cli

./: README.md  pyproject.toml  railway.toml  requirements.txt
agent/: client.py  strategy_adapter.py
clearing/: ecies.py  types.py
cli/: builder_fee.py  engine.py  hl_adapter.py  keystore.py  main.py  mcp_server.py  skill.md  strategy_registry.py
cli/api/: status_reader.py
cli/commands/: apex.py  daytrade.py  house.py  journal.py  reflect.py
common/: crypto.py
daytrade/: __init__.py  app.py  backtest.py  hk_app.py  indicators.py  models.py  notify_feishu.py  scanner.py  scheduled_scan.py  tradfi_app.py
daytrade/providers/: __init__.py  base.py  hyperliquid.py  yahoo.py
daytrade/strategies/: __init__.py  base.py  ema_crossover.py  liquidation_bounce.py  opening_range.py  rsi_reversal.py  session_breakout.py  (+2 more)
docs/: api-reference.md
modules/: apex_config.py  apex_engine.py  apex_state.py  archiver.py  guard_config.py  guard_state.py  journal_engine.py  journal_guard.py  judge_engine.py  judge_guard.py  memory_engine.py  memory_guard.py  obsidian_reader.py  obsidian_writer.py  reflect_adapter.py  reflect_engine.py  reflect_reporter.py  trailing_stop.py  wolf_config.py
scripts/: entrypoint.py
strategies/: _engine_base.py  engine_mm.py  funding_arb.py  liquidation_mm.py  regime_mm.py  risk_multipliers.py
tests/: test_apex_engine.py  test_archiver.py  test_builder_fee.py  test_engine_strategies.py  test_house_client.py  test_integration_phase3.py  test_integration_phase4.py  test_integration_safety.py  test_memory_engine.py  test_reflect_engine.py  test_smart_money.py  test_trailing_stop.py
(+27 files in other folders)
